Implementado toast para exibir informação da conta/vendedor selecionado

--- a/force-app/main/default/lwc/vendedoresPanel/vendedoresPanel.html
+++ b/force-app/main/default/lwc/vendedoresPanel/vendedoresPanel.html
@@ -5,7 +5,7 @@
                              key-field="Id"
                              columns={gridColumns}
                              data={gridData}
-                             onrowselection={handlerowselection}>
+                             onrowselection={handleRowSelection}>
     </lightning-tree-grid>
     </lightning-card>
 </template>
