Alterações no painel para exibir contas no mapa

--- a/force-app/main/default/lwc/vendedoresPanel/vendedoresPanel.html
+++ b/force-app/main/default/lwc/vendedoresPanel/vendedoresPanel.html
@@ -8,4 +8,12 @@
                              onrowselection={handleRowSelection}>
     </lightning-tree-grid>
     </lightning-card>
+    <lightning-card title="Mapa das Contas">
+        <lightning-map 
+            map-markers={mapMarkers} 
+            center={center} 
+            zoom-level={zoomLevel} 
+            markers-title="Contas">
+        </lightning-map>
+    </lightning-card>
 </template>
